package com.fatty.smarthome.core;

public class SecurityService {
    public boolean checkSecurity() {
        System.out.println("Security check: All systems secure");
        return true;
    }
}
